<resources>
    <string name="app_name">Medikamentenplan</string>
    <string name="headline">Herzlich Willkommen</string>
    <string name="paragraph">Dieser App ist darauf zugeschnitten, dass Sie mit diesem interaktiven Medikamentenplan nie wieder eine Einnahme Ihres Medikamentes vergessen.</string>
    <string name="placeholder">Platzhalter</string>
    <string name="export">Daten exportieren</string>
    <string name="help">Hilfe</string>
    <string name="import_title">Medikamentenplan importieren</string>
    <string name="add_title">Medikament hinzufügen</string>
    <string name="button_send">Abschicken</string>
    <string name="button_start">Start</string>
    <string name="button_import">Daten importieren</string>
    <string name="pill">Pillen</string>
    <string name="powder">Puder</string>
    <string name="granulate">Granulat</string>
    <string name="drops">Tropfen</string>
    <string name="juice">Saft</string>
    <string name="syrup">Sirup</string>
    <string name="infusion">Infusion</string>
    <string name="injection">Injektion</string>
    <string name="ointment">Salbe</string>
    <string name="cream">Creme</string>
    <string name="drug_description">Beschreibung</string>
    <string name="drug_date_of_last_intake">Einnahme bis Datum</string>
    <string name="drug_add_time">Hinzufügen</string>
    <string name="drug_dose_per_intake">Dosis pro Einnahme (benötigt)</string>
    <string name="drug_form">Art des Medikamentes (benötigt)</string>
    <string name="drug_dose_unit">Einheit der Dosierung (z.B. mg, Teelöffel)</string>
    <string name="drug_name">Name des Medikaments (benötigt)</string>
    <string name="drug_interval">Tag der Einnahme (benötigt)</string>
    <string name="drug_time">Zeit der Einnahme (benötigt)</string>
    <string name="delete_time">Entfernen</string>
    <string name="no_description">Keine Beschreibung</string>
    <string name="every_day">Jeden Tag</string>
    <string name="choose_action">Aktion wählen</string>
    <string name="time_edit_edit">Zeit bearbeiten</string>
    <string name="time_edit_create">Zeit erstellen</string>
    <string name="time_edit_delete">Zeit löschen</string>
    <string name="drug_edit_edit">Medikament bearbeiten</string>
    <string name="drug_edit_create">Medikament erstellen</string>
    <string name="drug_edit_delete">Medikament löschen</string>
    <string name="edit_title">Medikament bearbeiten</string>
    <string name="next_intake">Nächste Einnahme:</string>
    <string name="drug_check">Medikamente exportieren</string>
    <string name="no_intake_today">Heute keine Einnahmen mehr.</string>
    <string name="intake_overdue">Es sind Einnahmen überfällig, klicken Sie bitte auf HEUTE für mehr Informationen.</string>
    <string name="caution">Vorsicht! Sie überschreiben mit dieser Aktion alle bisher hinzugefügten Medikamente.</string>
    <string name="import_successful">Datenimport war erfolgreich.</string>
    <string name="import_unsuccessful">Konnte Daten nicht importieren.</string>
    <string name="export_successful">Datenexport war erfolgreich. Ihre Daten befinden sich im Downloadordner.</string>
    <string name="export_unsuccessful">Konnte Daten nicht exportieren.</string>
    <string name="file_not_exists">Datei existiert nicht.</string>
    <string name="okay">Okay</string>
    <string name="choose_file">Datei auswählen</string>
    <string name="choose_folder">Ordner auswählen</string>
    <string name="intake_notification">Einnahme von {-} ist fällig.</string>
    <string name="intake_boot_notification">Heute sind Einnahmen von Medikamenten fällig. Sehen Sie bitte in Ihrer App nach.</string>
    <string name="back">Zurück</string>
    <string name="edit_successful">Medikament erfolgreich bearbeitet.</string>
    <string name="add_successful">Medikament erfolgreich hinzugefügt.</string>
    <string name="add_unsuccessful">Medikament konnte nicht hinzugefügt werden. Sind alle benötigten Felder ausgefüllt?</string>
    <string name="button_today">Heute</string>
    <string name="intake_from_today">Einnahmen von heute</string>
    <string name="drug_intake_done">Medikament eingenommen</string>
    <string name="intake_already_done">Medikament heute bereits eingenommen.</string>
    <string name="intake_not_already_done">Medikament muss heute eingenommen werden.</string>
    <string name="button_old">Abgelaufen</string>
    <string name="intake_old">Abgelaufene Medikamente</string>
    <string name="failed">Fehler aufgetreten</string>
    <string name="scheduling_failed">Konnte keine Benachrichtigung planen. Der AlarmManager wurde nicht gefunden.</string>
    <string name="cancel_failed">Konnte Benachrichtung nicht abbrechen. Der AlarmManager wurde nicht gefunden.</string>
</resources>
