<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_grey"
    tools:context="com.sebastian_eggers.MediApp.Activities.AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_drug_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_drug_name"
                android:text="@string/drug_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_drug_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_drug_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_drug_description"
                android:text="@string/drug_description"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_drug_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_drug_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_time"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_view_times" />

            <Button
                android:id="@+id/button_add_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#eeeeee"
                android:background="@drawable/four_rounded_corner"
                android:elevation="10dp"
                android:text="@string/drug_add_time" />

            <TextView
                android:id="@+id/text_drug_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/radio_group_drug_form"
                android:text="@string/drug_interval"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_drug_interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <CheckBox
                    android:id="@+id/radio_button_placeholder1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_drug_date_of_last_intake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_drug_date_of_last_intake"
                android:text="@string/drug_date_of_last_intake"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_drug_date_of_last_intake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="none"
                android:focusable="false"
                android:cursorVisible="false" />

            <TextView
                android:id="@+id/text_drug_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/radio_group_drug_form"
                android:text="@string/drug_form"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_drug_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <RadioButton
                    android:id="@+id/radio_button_placeholder2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_drug_dose_per_intake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_drug_dose_per_intake"
                android:text="@string/drug_dose_per_intake"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_drug_dose_per_intake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/text_drug_dose_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_drug_dose_unit"
                android:text="@string/drug_dose_unit"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_drug_dose_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/four_rounded_corner"
                android:backgroundTint="@color/color_primary"
                android:elevation="10dp"
                android:text="@string/add_title"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
