<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/next_intake_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:paddingLeft="26dp"
                android:paddingTop="26dp"
                android:paddingRight="26dp"
                android:paddingBottom="26dp"
                android:text="@string/next_intake"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/button_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#EEEEEE"
                android:elevation="10dp"
                android:background="@drawable/four_rounded_corner"
                android:layout_marginBottom="26dp"
                android:text="@string/button_today" />

            <Button
                android:id="@+id/button_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#EEEEEE"
                android:layout_marginStart="10dp"
                android:elevation="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/four_rounded_corner"
                android:layout_marginBottom="26dp"
                android:text="@string/button_old" />
        </LinearLayout>

        <ListView
            android:id="@+id/drug_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:divider="@android:color/transparent"
            android:dividerHeight="20dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add_drug_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:background="@color/color_accent"
        android:backgroundTint="@color/color_accent"
        android:clickable="true"
        android:src="@drawable/ic_floating_add_drug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>